Fix MeBox alignment in Breadcrumbs bar. Fix span colouring bleed through from plugin list style.

--- a/themes/vforg/design/custom.css
+++ b/themes/vforg/design/custom.css
@@ -163,6 +163,10 @@ a {
    color: #1f1e1e;
 }
 
+.BreadcrumbsWrapper .MeBox img.ProfilePhoto {
+   margin-bottom: 2px;
+}
+
 /** End of header. **/
 
 .TagCloud li {
